--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/dayTextView"
             android:text="Tuesday"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:textSize="10sp"
             android:textAlignment="center"
             />
