--- a/app/src/main/res/drawable/compass_icon.xml
+++ b/app/src/main/res/drawable/compass_icon.xml
@@ -1,4 +1,33 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
-</selector>
+    <!-- Outer circle -->
+    <path
+        android:strokeWidth="2"
+        android:strokeColor="@android:color/black"
+        android:fillColor="@android:color/transparent"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z" />
+
+    <!-- North arrow -->
+    <path
+        android:fillColor="@android:color/holo_red_dark"
+        android:pathData="M12,4L13,10L12,8L11,10L12,4z" />
+
+    <!-- South arrow -->
+    <path
+        android:fillColor="@android:color/holo_blue_dark"
+        android:pathData="M12,20L13,14L12,16L11,14L12,20z" />
+
+    <!-- East arrow -->
+    <path
+        android:fillColor="@android:color/holo_green_dark"
+        android:pathData="M20,12L14,13L16,12L14,11L20,12z" />
+
+    <!-- West arrow -->
+    <path
+        android:fillColor="@android:color/holo_orange_dark"
+        android:pathData="M4,12L10,13L8,12L10,11L4,12z" />
+</vector>
